Fix: z-index for navbar and searchbar as should always be in front

--- a/bonsai_bay/static/css/style.css
+++ b/bonsai_bay/static/css/style.css
@@ -103,12 +103,14 @@ footer {
   position: sticky;
   top: 0;
   width: 100%;
+  z-index: 100;
 }
 
 /* Search Bar */
 .search-bar {
   position: sticky;
   top: 96px;
+  z-index: 99;
 }
 
 .search-bar input {
